Forgot to actually run the updated task success function before regenerating data, oops!

--- a/Analysis/Analysis.ipynb
+++ b/Analysis/Analysis.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 353,
    "id": "03a8b546-1295-486d-9f77-d734fcb6aaab",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 354,
    "id": "be98cb41-5dae-485a-97a6-f65dba133a32",
    "metadata": {},
    "outputs": [
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 2001 cached results\n",
-      "Read 2001 new results and kept 2001 after filtering\n"
+      "Read 2160 cached results\n",
+      "Read 2160 new results and kept 2001 after filtering\n"
      ]
     }
    ],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 356,
    "id": "4f2a64b8-56e9-4f37-b92a-b7cd669c0143",
    "metadata": {},
    "outputs": [
@@ -385,6 +385,7 @@
        "      <th></th>\n",
        "      <th>Time</th>\n",
        "      <th>Time to Target</th>\n",
+       "      <th>Success</th>\n",
        "      <th>Overshoots</th>\n",
        "      <th>Activations</th>\n",
        "      <th>ErrorDistance</th>\n",
@@ -396,6 +397,7 @@
        "      <th>mean</th>\n",
        "      <td>8824.258274</td>\n",
        "      <td>2808.464705</td>\n",
+       "      <td>0.966517</td>\n",
        "      <td>6.726637</td>\n",
        "      <td>27.578711</td>\n",
        "      <td>1.068960</td>\n",
@@ -405,6 +407,7 @@
        "      <th>std</th>\n",
        "      <td>5162.248383</td>\n",
        "      <td>2677.987994</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>5.275958</td>\n",
        "      <td>19.832270</td>\n",
        "      <td>15.206615</td>\n",
@@ -414,6 +417,7 @@
        "      <th>min</th>\n",
        "      <td>659.958183</td>\n",
        "      <td>-1.000000</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>-147.410000</td>\n",
@@ -423,6 +427,7 @@
        "      <th>max</th>\n",
        "      <td>29884.812333</td>\n",
        "      <td>14950.710199</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>36.000000</td>\n",
        "      <td>174.000000</td>\n",
        "      <td>131.087600</td>\n",
@@ -433,20 +438,20 @@
        "</div>"
       ],
       "text/plain": [
-       "              Time  Time to Target  Overshoots  Activations  ErrorDistance  \\\n",
-       "mean   8824.258274     2808.464705    6.726637    27.578711       1.068960   \n",
-       "std    5162.248383     2677.987994    5.275958    19.832270      15.206615   \n",
-       "min     659.958183       -1.000000    0.000000     2.000000    -147.410000   \n",
-       "max   29884.812333    14950.710199   36.000000   174.000000     131.087600   \n",
+       "              Time  Time to Target   Success  Overshoots  Activations  \\\n",
+       "mean   8824.258274     2808.464705  0.966517    6.726637    27.578711   \n",
+       "std    5162.248383     2677.987994       NaN    5.275958    19.832270   \n",
+       "min     659.958183       -1.000000       NaN    0.000000     2.000000   \n",
+       "max   29884.812333    14950.710199       NaN   36.000000   174.000000   \n",
        "\n",
-       "      AbsErrorDistance  \n",
-       "mean         10.092672  \n",
-       "std          11.422409  \n",
-       "min           0.000000  \n",
-       "max         147.410000  "
+       "      ErrorDistance  AbsErrorDistance  \n",
+       "mean       1.068960         10.092672  \n",
+       "std       15.206615         11.422409  \n",
+       "min     -147.410000          0.000000  \n",
+       "max      131.087600        147.410000  "
       ]
      },
-     "execution_count": 289,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,6 +461,7 @@
     "\n",
     "data_filtered.agg({'Time': ['mean', 'std', 'min', 'max'],\n",
     "                   'Time to Target': ['mean', 'std', 'min', 'max'],\n",
+    "                   'Success': ['mean'],\n",
     "                   'Overshoots': ['mean', 'std', 'min', 'max'],\n",
     "                   'Activations': ['mean', 'std', 'min', 'max'],\n",
     "                   'ErrorDistance': ['mean', 'std', 'min', 'max'],\n",
